Support `CREATE2` opcode (#2834)
* Initial commit, introduce AbstractRecordingCreateOperation

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Implement AbstractRecordingCreateOperation, externalize skeleton child creation records

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Finish basic record customization; TODO: add sponsor-derived info to synthetic creates

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Fix unit test

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Complete customization of synthetic contract creations

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Add license headers and javadoc

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Intermezzo

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Make a token changed for sig requirements if its fee schedule is updated

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Complete StackedContractAliases impl

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Add ContractAliases to WorldLedgers; TODO - add commit()/revert() callbacks

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Add failing CREATE2 EET

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Bind unsupported Create2 operation

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Basic CREATE2 EET working; TODO - maintain accounts map aliases + allow re-creations and stable CREATE2-in-CREATE2 addresses

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Support ContractGetInfo w/ create2 address; TODO - wrap up contract alias mgmt

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Last TODO - stabilize CREATE2-within-CREATE2 alias generation

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Stabilize CREATE2 address generation

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

*